Adds hover text

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <p>Hi from Owner</p>
+    <p>Hi from Forker</p>
+    <p id="hover_text">Move your mouse here</p>
 </body>
 </html>
